# sense

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
frontend/: dashboard.html  index.html
ingestor-service/: Dockerfile  main.py  pubsub-init.py  pyproject.toml  test_main.py
processor-service/: Dockerfile  main.py  pyproject.toml  test_main.py
